// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmountLabel > should render 1`] = `
<DocumentFragment>
  <div
    class="font-semibold overflow-hidden no-ligatures bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 dim:border-theme-success-700 dim:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        + 10.00 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AmountLabel > should render compact 1`] = `
<DocumentFragment>
  <div
    class="font-semibold overflow-hidden no-ligatures bg-theme-success-100 text-theme-success-700 dark:border dark:border-theme-success-700 dark:bg-transparent dark:text-theme-success-500 dim:border-theme-success-700 dim:text-theme-success-500 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        + 10.00 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AmountLabel > should render negative 1`] = `
<DocumentFragment>
  <div
    class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        - 10.00 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AmountLabel > should render zero 1`] = `
<DocumentFragment>
  <div
    class="font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent dim:text-theme-dim-200 dim:border-theme-dim-700 text-base flex h-full w-fit items-center justify-center rounded px-1.5"
    data-testid="AmountLabel__wrapper"
  >
    <div
      class="flex h-full items-center space-x-1"
    >
      <span
        class="whitespace-nowrap text-sm"
        data-testid="Amount"
      >
        0.00 ARK
      </span>
    </div>
  </div>
</DocumentFragment>
`;
